NEWS
====

* yyyy/mm/dd v.1.5.1

    - compat.py: provide more helper functions and aliases to reduce changes
      required to convert python 2compatible sources to python 3. The code
      becomes quite ugly, but such compatibility has its price.
    - Python 3 compatibility: tobinstr should return bytes not unicode string
      (Bug #1212698).

* 2013/08/02 v.1.5

    - API changes: Functions tobinarray/tobinstr/tobinfile:
      pad parameter is deprecated and will be removed in
      future releases. Use IntelHex.padding attribute instead,
      and don't pass pad as None explicitly please.
      If you need to use size parameter, then use syntax like that:
          ih.tobinarray(start=xxx, size=yyy)
    - API changes: Functions tobinarray/tobinstr/tobinfile:
      default value of pad is None now (was 0xFF) 
      to allow value of IntelHex.padding used 
      if no explicit pad specified.
    - Fixed bug: wrong getopt error handling in some scripts.
      (Thanks to Andy Mozhevilov for bug report)
    - PEP-8 style improvements. (Thanks to Stefan Schmitt)
    - IntelHex16bit.tobinarray method returns array of unsigned short
      (words) values. (Feature request from Stefan Schmitt)
    - Improved Python 3 compatibility (don't use old file() function).
      (Thanks to Luis Panadero Guardeño for bug report)

* 2012/04/25 v.1.4

    - New feature: compare 2 hex files using hex dump
      as string representation. Feature available as
      worker function diff_dumps() and as command-line
      utility hexdiff.py (#627924).
    - Changes in the codebase suggested by 2to3 tool to provide
      compatibility with Python3. Now sources can be successfully
      converted to Python3 with 2to3 utility. 
      See Python 3 notes in README.txt and documentation.
      (Thanks to Bernhard Leiner for his help)
    - Fixed bug #988148: IntelHex16bit should copy all public attributes
      from source IntelHex 8-bit object. (Thanks to Morgan McClure)

* 2010/11/24 v.1.3
