@@ -1,4 +1,4 @@
-Copyright (c) 2005-2013, Alexander Belchenko
+Copyright (c) 2005-2014, Alexander Belchenko
 All rights reserved.
 
 Redistribution and use in source and binary forms,
