@@ -2,7 +2,7 @@
 Python IntelHex User Manual
 ---------------------------
 
-:Version: 1.5.1
+:Version: 2.0
 
 .. contents::
 .. sectnum::
