@@ -42,16 +42,16 @@ master_doc = 'index'
 
 # General information about the project.
 project = 'IntelHex'
-copyright = '2005-2013, Alexander Belchenko'
+copyright = '2005-2014, Alexander Belchenko'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = '1.5.1'
+version = '2.0'
 # The full version, including alpha/beta/rc tags.
-release = '1.5.1'
+release = '2.0'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
