@@ -1,0 +1,2 @@
+[wheel]
+universal = 1
