@@ -1,5 +1,0 @@
-#!/usr/bin/env python
-import sys
-from lib2to3.main import main
-
-sys.exit(main("lib2to3.fixes"))
