@@ -1,6 +1,0 @@
-2to3.py script was copied from Python 3.2 installation
-(C:\Python32\Tools\Scripts\2to3.py)
-
-crlf.py script was copied from Python 3.2 installation
-(C:\Python32\Tools\Scripts\crlf.py)
-
